# aMaze

./: .env.example  CLAUDE.md  Makefile  ROADMAP.md  docker-compose.yml  pyproject.toml
agent_runtime/: Dockerfile.base  pyproject.toml
agent_runtime/src/agent_runtime/: __init__.py  amaze_client.py  bootstrap.py  mcp_client.py
docker/: python-base.Dockerfile
docker/postgres/: init.sql  seed.sql
examples/agents/echo/: Dockerfile
examples/agents/echo/src/: main.py
examples/agents/researcher/: Dockerfile
examples/agents/researcher/src/: main.py
examples/agents/reviewer/src/: main.py
examples/agents/summarizer/: Dockerfile
examples/agents/summarizer/src/: main.py
examples/mcp/calculator/: Dockerfile
examples/mcp/calculator/src/: main.py
examples/mcp/counter/: Dockerfile
examples/mcp/counter/src/: main.py
examples/mcp/filesystem/: Dockerfile
examples/mcp/filesystem/src/: main.py
examples/mcp/websearch/: Dockerfile
examples/mcp/websearch/src/: main.py
mcp_runtime/: Dockerfile.base  pyproject.toml
mcp_runtime/src/mcp_runtime/: __init__.py  bootstrap.py  registry_client.py
services/api_gateway/: Dockerfile  pyproject.toml
services/api_gateway/src/api_gateway/: deps.py  main.py
services/api_gateway/src/api_gateway/routers/: agents.py  graphs.py  policies.py  registry.py  sessions.py  ws.py
services/orchestrator/: Dockerfile  pyproject.toml
services/orchestrator/src/orchestrator/: container_manager.py  main.py  session_manager.py
services/policy_engine/: Dockerfile  pyproject.toml
services/policy_engine/src/policy_engine/: main.py
services/proxy/: Dockerfile  pyproject.toml
services/proxy/src/proxy/: config.py  main.py
services/proxy/src/proxy/addons/: classifier.py  event_emitter.py  graph_enforcer.py  policy_enforcer.py  router.py  session_id.py  token_counter.py
services/registry/: Dockerfile  old-Dockerfile  pyproject.toml
services/registry/src/registry/: main.py  schemas.py
services/ui/: Dockerfile  index.html  nginx.conf  package.json  vite.config.ts
services/ui/src/: App.tsx  index.css  types.ts
services/ui/src/api/: agents.ts  graphs.ts  policies.ts  registry.ts  sessions.ts
services/ui/src/components/layout/: Layout.tsx  Sidebar.tsx
services/ui/src/components/ui/: badge.tsx  textarea.tsx
services/ui/src/pages/: AgentsPage.tsx  GraphsPage.tsx  PoliciesPage.tsx  RegistryPage.tsx  SessionDetailPage.tsx  SessionsPage.tsx
shared/: pyproject.toml
shared/alembic/: env.py
shared/src/amaze_shared/: db.py  events.py
shared/src/amaze_shared/models/: __init__.py  agent.py  graph.py  policy.py  registry.py  session.py
