[project]
name = "amaze-workspace"
version = "0.1.0"
requires-python = ">=3.12"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv.workspace]
members = [
    "shared",
    "services/api_gateway",
    "services/orchestrator",
    "services/proxy",
    "services/registry",
    "services/policy_engine",
    "agent_runtime",
    "mcp_runtime",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.mypy]
python_version = "3.12"
strict = true