[project]
name = "amaze-mcp-runtime"
version = "0.1.0"
description = "Base runtime package for aMaze MCP server containers"
requires-python = ">=3.12"
dependencies = [
    "httpx>=0.27",
    "fastapi[standard]>=0.115",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/mcp_runtime"]
