[project]
name = "amaze-shared"
version = "0.1.0"
description = "Shared Pydantic models and SQLAlchemy ORM for the aMaze platform"
requires-python = ">=3.12"
dependencies = [
    "pydantic>=2.9",
    "sqlalchemy>=2.0",
    "asyncpg>=0.29",
    "alembic>=1.13",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/amaze_shared"]

[tool.uv]
dev-dependencies = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "ruff>=0.6",
    "mypy>=1.11",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.mypy]
python_version = "3.12"
strict = true
