[project]
name = "amaze-orchestrator"
version = "0.1.0"
description = "aMaze orchestrator — Docker container lifecycle management"
requires-python = ">=3.12"
dependencies = [
    "amaze-shared",
    "fastapi[standard]>=0.115",
    "sqlalchemy>=2.0",
    "asyncpg>=0.29",
    "redis>=5.0",
    "docker>=7.0",
    "httpx>=0.27",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/orchestrator"]

[tool.uv.sources]
amaze-shared = { workspace = true }

[tool.uv]
dev-dependencies = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
]
