[project]
name = "amaze-policy-engine"
version = "0.1.0"
description = "aMaze stateless policy evaluation service"
requires-python = ">=3.12"
dependencies = [
    "amaze-shared",
    "fastapi[standard]>=0.115",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/policy_engine"]

[tool.uv.sources]
amaze-shared = { workspace = true }

[tool.uv]
dev-dependencies = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "httpx>=0.27",
]
