[project]
name = "amaze-proxy"
version = "0.1.0"
description = "aMaze policy-enforcement proxy (mitmproxy-based)"
requires-python = ">=3.12"
dependencies = [
    "mitmproxy>=10.0",
    "redis>=5.0",
    "httpx>=0.27",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/proxy"]

[tool.uv]
dev-dependencies = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
]
